<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ic_bg2"
    tools:context=".Panthome">

    <org.imaginativeworld.whynotimagecarousel.ImageCarousel
        android:id="@+id/carousel"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:autoPlay="true"
        app:autoPlayDelay="3000" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="BIENVENIDO"
        android:textSize="25dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/black"/>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2"
        android:rowCount="3">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp"
        app:cardMaxElevation="8dp"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nosotros"
                android:textAlignment="center"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mision"
                android:textAlignment="center"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vision"
                android:textAlignment="center"
                android:textStyle="bold" />
            <ImageView
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:src="@drawable/pinguino"
                android:layout_gravity="end"/>

        </LinearLayout>
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/paleta"
            android:layout_gravity="start"
            android:layout_marginTop="270dp"/>
    </androidx.cardview.widget.CardView>
    </GridLayout>

</LinearLayout>